# SpinnerOS

./: BUILD_ISO_GUIDE.md  Cargo.toml  LICENSE  README.md  setup-wsl-and-build.ps1
.github/workflows/: build-iso.yml
config/: spinner-shell.toml  spinner-wm.toml
config/gtk-4.0/: settings.ini
docs/: INSTALL.md
spinner-settings/: Cargo.toml
spinner-settings/src/: main.rs
spinner-shell/: Cargo.toml
spinner-shell/src/: main.rs
spinner-shell/src/app_menu/: launcher.rs  mod.rs  search.rs
spinner-shell/src/notifications/: mod.rs
spinner-shell/src/panel/: clock.rs  mod.rs  systray.rs  taskbar.rs
spinner-shell/src/theme/: glass.css  mod.rs
spinner-store/: Cargo.toml
spinner-store/src/: main.rs
spinner-wm/: Cargo.toml
spinner-wm/src/: compositor.rs  config.rs  input.rs  main.rs  window.rs
