[workspace]
resolver = "2"
members = [
    "spinner-wm",
    "spinner-shell",
    "spinner-settings",
    "spinner-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SpinnerOS Team"]
license = "GPL-3.0"
repository = "https://github.com/spinneros/spinneros"

[workspace.dependencies]
gtk4 = "0.9"
libadwaita = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
freedesktop-desktop-entry = "0.5"
xdg = "2.5"
zbus = "4.0"
fuzzy-matcher = "0.3"
chrono = "0.4"
