[workspace]
resolver = "2"
members = [
    "spinner-wm",
    "spinner-shell",
    "spinner-settings",
    "spinner-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SpinnerOS Team"]
license = "GPL-3.0"

[workspace.dependencies]
gtk4 = "0.7"
libadwaita = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
xdg = "2.5"
fuzzy-matcher = "0.3"
chrono = "0.4"
once_cell = "1"
dirs = "5"
glib = "0.18"
gio = "0.18"
gdk4 = "0.7"
pango = "0.18"
cairo-rs = "0.18"
