[package]
name = "spinner-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SpinnerOS Desktop Environment - Panel, App Menu, Notifications"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
freedesktop-desktop-entry.workspace = true
xdg.workspace = true
zbus.workspace = true
fuzzy-matcher.workspace = true
chrono.workspace = true

glib = "0.20"
gio = "0.20"
gdk4 = "0.9"
gdk4-wayland = "0.9"
pango = "0.20"
cairo-rs = "0.20"

once_cell = "1.19"
dirs = "5.0"
notify-rust = "4.10"
async-channel = "2.1"

[build-dependencies]
glib-build-tools = "0.20"
