[package]
name = "spinner-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SpinnerOS App Store - APT and Flatpak GUI"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
xdg.workspace = true
once_cell.workspace = true
dirs.workspace = true
glib.workspace = true
gio.workspace = true

reqwest = { version = "0.11", features = ["json"] }
