[package]
name = "spinner-wm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SpinnerOS Wayland Compositor - Floating Window Manager"

[dependencies]
smithay = { version = "0.3", default-features = false, features = [
    "desktop",
    "wayland_frontend",
    "backend_drm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_glow",
    "xwayland",
] }
smithay-drm-extras = "0.3"
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "staging"] }

tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
xdg.workspace = true

calloop = "0.14"
input = "0.9"
libc = "0.2"
bitflags = "2.4"
indexmap = "2.1"

[features]
default = ["udev"]
udev = []
x11 = ["smithay/backend_x11", "smithay/backend_winit"]
