[package]
name = "spinner-wm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SpinnerOS Wayland Compositor - Floating Window Manager"

[dependencies]
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
xdg.workspace = true

calloop = "0.12"
libc = "0.2"
bitflags = "2"
indexmap = "2"
